--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -22,7 +22,7 @@ h1 {
     width: 100px;
     height: 100px;
 }
-.final {
+.product_cost {
     width: 650px;
     margin: 2% 5% auto;
     display: flex;
